--- a/index.html
+++ b/index.html
@@ -22,7 +22,23 @@
 </head>
 
 <body>
-    <nav class="Navegacion">Electric Cars</nav>
+    <nav class="Navegacion navbar navbar-dark">
+        <div>
+            <i class="fa fa-solid fa-car"><b> Electric Cars</b></i>
+        </div> 
+        <div class="boton-mobile">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+        </div>
+        <div class="opciones-nav">
+            <a href="#" class="list-group-item list-group-item-action" aria-current="true">Inicio</a>
+            <a href="#" class="list-group-item list-group-item-action">Catalogo</a>
+            <a href="#" class="list-group-item list-group-item-action">Ofertas</a>
+            <a href="#" class="list-group-item list-group-item-action">Contacto</a>
+            
+          </div>
+    </nav>
     <section class="Filtro">
         <h5>Ordenar Por:</h5>
         <div class="px-4">
@@ -35,7 +51,7 @@
         </div>
     </section>
     <section class="Principal">
-        <div class="Lista">
+        <div class="Lista p-4">
             <div class="card text-center">
                 <img src="https://generatorfun.com/code/uploads/Random-Car-image-8.jpg" class="card-image" alt="...">
                 <div class="card-body">
